# djangoninja-learn

./: .gitignore  pyproject.toml  requirements.txt
api/: api.py  api.txt  api2.py  models.py  schemas.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_remove_book_isbn.py  0003_alter_book_author_remove_book_genre_and_more.py  0004_remove_book_title_book_name_alter_book_author.py  0005_book_quantity.py  0006_alter_book_language_alter_book_summary.py  0007_alter_book_author_alter_book_language_and_more.py
api/templates/api/: index.html
core/: settings.py
